--- a/OpenGLPractice/OpenGLPractice.vcxproj
+++ b/OpenGLPractice/OpenGLPractice.vcxproj
@@ -149,12 +149,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\index_buffer.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="res\glad.c" />
     <ClCompile Include="src\OpenGLPractice.cpp" />
     <ClCompile Include="src\vertex_buffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\index_buffer.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\vertex_buffer.h" />
   </ItemGroup>
