--- a/OpenGLPractice/OpenGLPractice.vcxproj
+++ b/OpenGLPractice/OpenGLPractice.vcxproj
@@ -154,11 +154,15 @@
     <ClCompile Include="res\glad.c" />
     <ClCompile Include="src\OpenGLPractice.cpp" />
     <ClCompile Include="src\vertex_buffer.cpp" />
+    <ClCompile Include="src\vertex_array.cpp" />
+    <ClCompile Include="src\vertex_buffer_layout.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\index_buffer.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\vertex_buffer.h" />
+    <ClInclude Include="src\vertex_array.h" />
+    <ClInclude Include="src\vertex_buffer_layout.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Basic.shader" />
