--- a/OpenGLPractice/OpenGLPractice.vcxproj
+++ b/OpenGLPractice/OpenGLPractice.vcxproj
@@ -153,7 +153,8 @@
     <ClCompile Include="src\index_buffer.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="res\glad.c" />
-    <ClCompile Include="src\OpenGLPractice.cpp" />
+    <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\utils.cpp" />
     <ClCompile Include="src\vertex_buffer.cpp" />
     <ClCompile Include="src\vertex_array.cpp" />
     <ClCompile Include="src\vertex_buffer_layout.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="src\index_buffer.h" />
     <ClInclude Include="src\renderer.h" />
     <ClInclude Include="src\shader.h" />
+    <ClInclude Include="src\utils.h" />
     <ClInclude Include="src\vertex_buffer.h" />
     <ClInclude Include="src\vertex_array.h" />
     <ClInclude Include="src\vertex_buffer_layout.h" />
